--- a/week2/week2/Base.lproj/LaunchScreen.storyboard
+++ b/week2/week2/Base.lproj/LaunchScreen.storyboard
@@ -18,19 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="breadslaunch" translatesAutoresizingMaskIntoConstraints="NO" id="xyE-Mi-vvf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OHHHHH SNAP!!!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33a-VM-mGA">
-                                <rect key="frame" x="116" y="162" width="142" height="20.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="142" id="LdZ-YR-fK8"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="116" y="162" width="142" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="xyE-Mi-vvf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0fA-f6-PEi"/>
+                            <constraint firstItem="xyE-Mi-vvf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7UO-os-b7N"/>
+                            <constraint firstItem="xyE-Mi-vvf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RK5-JR-x4e"/>
+                            <constraint firstItem="xyE-Mi-vvf" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="WxJ-zs-5lT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="33a-VM-mGA" secondAttribute="bottom" constant="484.5" id="a6q-Wt-yhO"/>
+                            <constraint firstItem="xyE-Mi-vvf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gcE-yO-t9w"/>
                             <constraint firstItem="33a-VM-mGA" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="142" id="oAu-Sn-4xZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="33a-VM-mGA" secondAttribute="trailing" constant="117" id="tpR-hD-Exf"/>
                             <constraint firstItem="33a-VM-mGA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="116" id="zuf-PJ-qid"/>
@@ -43,4 +48,7 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="breadslaunch" width="1024" height="1024"/>
+    </resources>
 </document>
